exports[`test the round back button matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="ugnwF">
  ButtonValue
</button>
`;

exports[`test the round back button with button type given matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="ugnwF"
  type="button">
  ButtonValue
</button>
`;
